force-app/main/default/objects/Asset_Type_Product__c/Asset_Type_Product__c.object-meta.xml
<CustomObject>
    <label>Asset Type Product</label>
    <nameField>
        <displayFormat>ATP-{0000000}</displayFormat>
        <label>Asset Type Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Type Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>