force-app/main/default/objects/Asset_Type_Product__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <referenceTo>Asset_Type__c</referenceTo>
    <relationshipLabel>Asset Type Products</relationshipLabel>
    <relationshipName>Asset_Type_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>