force-app/main/default/objects/Asset_Type_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Asset Type Products</relationshipLabel>
    <relationshipName>Asset_Type_Products</relationshipName>
    <type>Lookup</type>
</CustomField>