force-app/main/default/objects/Asset_Type_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Type__c</columns>
    <columns>Product__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Asset Type Products</label>
</ListView>